ShaderCompiler/aslc/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Unused terminals:

    UNIFORM
    COLON
    FOR

Grammar

Rule 0     S' -> module
Rule 1     module -> module_element_list
Rule 2     module_element_list -> <empty>
Rule 3     module_element_list -> module_element_list module_element
Rule 4     module_element -> function_declaration
Rule 5     module_element -> function_definition
Rule 6     module_element -> struct_definition
Rule 7     function_kind -> <empty>
Rule 8     function_kind -> KERNEL LPAREN IDENTIFIER RPAREN
Rule 9     prototype_arguments -> prototype_arguments_empty
Rule 10    prototype_arguments -> prototype_arguments_nonempty
Rule 11    prototype_arguments_empty -> <empty>
Rule 12    prototype_arguments_nonempty -> prototype_argument
Rule 13    prototype_arguments_nonempty -> prototype_arguments_nonempty COMMA prototype_argument
Rule 14    prototype_argument -> argument_pass_type type_expr IDENTIFIER
Rule 15    argument_pass_type -> <empty>
Rule 16    argument_pass_type -> IN
Rule 17    argument_pass_type -> OUT
Rule 18    argument_pass_type -> INOUT
Rule 19    function_prototype -> function_kind type_expr IDENTIFIER LPAREN prototype_arguments RPAREN
Rule 20    function_declaration -> function_prototype SEMICOLON
Rule 21    function_definition -> function_prototype LCBRACKET statement_list RCBRACKET
Rule 22    statement_list -> <empty>
Rule 23    statement_list -> statement_list statement
Rule 24    statement -> null_statement
Rule 25    statement -> block_statement
Rule 26    statement -> if_statement
Rule 27    statement -> while_statement
Rule 28    statement -> do_while_statement
Rule 29    statement -> break_statement
Rule 30    statement -> continue_statement
Rule 31    statement -> discard_statement
Rule 32    statement -> return_statement
Rule 33    statement -> variables_declaration
Rule 34    statement -> expression_statement
Rule 35    variables_declaration -> type_expr variables_names SEMICOLON
Rule 36    variables_names -> variable_name
Rule 37    variables_names -> variables_names COMMA variable_name
Rule 38    variable_name -> IDENTIFIER
Rule 39    variable_name -> IDENTIFIER ASSIGN expression
Rule 40    null_statement -> SEMICOLON
Rule 41    block_statement -> LCBRACKET statement_list RCBRACKET
Rule 42    if_statement -> IF LPAREN expression RPAREN statement
Rule 43    if_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 44    while_statement -> WHILE LPAREN expression RPAREN statement
Rule 45    do_while_statement -> DO statement WHILE LPAREN expression RPAREN
Rule 46    break_statement -> BREAK SEMICOLON
Rule 47    continue_statement -> CONTINUE SEMICOLON
Rule 48    discard_statement -> DISCARD SEMICOLON
Rule 49    return_statement -> RETURN SEMICOLON
Rule 50    return_statement -> RETURN expression SEMICOLON
Rule 51    expression_statement -> expression SEMICOLON
Rule 52    expression -> primary_expression
Rule 53    expression -> expression PLUS expression
Rule 54    expression -> expression MINUS expression
Rule 55    expression -> expression MULTIPLY expression
Rule 56    expression -> expression DIVIDE expression
Rule 57    expression -> expression REMAINDER expression
Rule 58    expression -> expression LT expression
Rule 59    expression -> expression LE expression
Rule 60    expression -> expression EQ expression
Rule 61    expression -> expression NE expression
Rule 62    expression -> expression GT expression
Rule 63    expression -> expression GE expression
Rule 64    expression -> expression LAND expression
Rule 65    expression -> expression LOR expression
Rule 66    expression -> expression BITAND expression
Rule 67    expression -> expression BITOR expression
Rule 68    expression -> expression BITXOR expression
Rule 69    expression -> expression SHIFTLEFT expression
Rule 70    expression -> expression SHIFTRIGHT expression
Rule 71    expression -> expression ASSIGN expression
Rule 72    expression -> expression ASSIGN_PLUS expression
Rule 73    expression -> expression ASSIGN_MINUS expression
Rule 74    expression -> expression ASSIGN_MULTIPLY expression
Rule 75    expression -> expression ASSIGN_DIVIDE expression
Rule 76    expression -> expression ASSIGN_REMAINDER expression
Rule 77    expression -> expression ASSIGN_BITOR expression
Rule 78    expression -> expression ASSIGN_BITAND expression
Rule 79    expression -> expression ASSIGN_BITXOR expression
Rule 80    expression -> expression ASSIGN_SHIFTLEFT expression
Rule 81    expression -> expression ASSIGN_SHIFTRIGHT expression
Rule 82    expression -> PLUS expression
Rule 83    expression -> MINUS expression
Rule 84    expression -> LNOT expression
Rule 85    expression -> BITNOT expression
Rule 86    primary_expression -> constant
Rule 87    primary_expression -> identifier
Rule 88    primary_expression -> parenthesis_expression
Rule 89    primary_expression -> member_access
Rule 90    primary_expression -> subscript_access
Rule 91    primary_expression -> call_expression
Rule 92    parenthesis_expression -> LPAREN expression RPAREN
Rule 93    member_access -> primary_expression DOT IDENTIFIER
Rule 94    subscript_access -> primary_expression LBRACKET expression RBRACKET
Rule 95    call_expression -> primary_expression LPAREN call_arguments RPAREN
Rule 96    call_arguments -> call_arguments_empty
Rule 97    call_arguments -> call_arguments_nonempty
Rule 98    call_arguments_empty -> <empty>
Rule 99    call_arguments_nonempty -> expression
Rule 100   call_arguments_nonempty -> call_arguments_nonempty COMMA expression
Rule 101   constant -> integer_constant
Rule 102   constant -> boolean_constant
Rule 103   constant -> real_constant
Rule 104   constant -> string_literal
Rule 105   integer_constant -> INTEGER
Rule 106   boolean_constant -> TRUE
Rule 107   boolean_constant -> FALSE
Rule 108   real_constant -> REAL
Rule 109   string_literal -> STRING
Rule 110   type_expr -> type
Rule 111   type_expr -> identifier
Rule 112   type -> TYPE
Rule 113   identifier -> IDENTIFIER
Rule 114   struct_definition -> optional_attribute_list STRUCT IDENTIFIER LCBRACKET struct_fields RCBRACKET SEMICOLON
Rule 115   struct_fields -> struct_fields struct_field
Rule 116   struct_fields -> <empty>
Rule 117   struct_field -> optional_attribute_list type IDENTIFIER SEMICOLON
Rule 118   optional_attribute_list -> <empty>
Rule 119   optional_attribute_list -> optional_attribute_list attribute
Rule 120   attribute -> LBRACKET IDENTIFIER attribute_arguments RBRACKET
Rule 121   attribute_arguments -> <empty>
Rule 122   attribute_arguments -> LPAREN call_arguments RPAREN

Terminals, with rules where they appear

ASSIGN               : 39 71
ASSIGN_BITAND        : 78
ASSIGN_BITOR         : 77
ASSIGN_BITXOR        : 79
ASSIGN_DIVIDE        : 75
ASSIGN_MINUS         : 73
ASSIGN_MULTIPLY      : 74
ASSIGN_PLUS          : 72
ASSIGN_REMAINDER     : 76
ASSIGN_SHIFTLEFT     : 80
ASSIGN_SHIFTRIGHT    : 81
BITAND               : 66
BITNOT               : 85
BITOR                : 67
BITXOR               : 68
BREAK                : 46
COLON                : 
COMMA                : 13 37 100
CONTINUE             : 47
DISCARD              : 48
DIVIDE               : 56
DO                   : 45
DOT                  : 93
ELSE                 : 43
EQ                   : 60
FALSE                : 107
FOR                  : 
GE                   : 63
GT                   : 62
IDENTIFIER           : 8 14 19 38 39 93 113 114 117 120
IF                   : 42 43
IN                   : 16
INOUT                : 18
INTEGER              : 105
KERNEL               : 8
LAND                 : 64
LBRACKET             : 94 120
LCBRACKET            : 21 41 114
LE                   : 59
LNOT                 : 84
LOR                  : 65
LPAREN               : 8 19 42 43 44 45 92 95 122
LT                   : 58
MINUS                : 54 83
MULTIPLY             : 55
NE                   : 61
OUT                  : 17
PLUS                 : 53 82
RBRACKET             : 94 120
RCBRACKET            : 21 41 114
REAL                 : 108
REMAINDER            : 57
RETURN               : 49 50
RPAREN               : 8 19 42 43 44 45 92 95 122
SEMICOLON            : 20 35 40 46 47 48 49 50 51 114 117
SHIFTLEFT            : 69
SHIFTRIGHT           : 70
STRING               : 109
STRUCT               : 114
TRUE                 : 106
TYPE                 : 112
UNIFORM              : 
WHILE                : 44 45
error                : 

Nonterminals, with rules where they appear

argument_pass_type   : 14
attribute            : 119
attribute_arguments  : 120
block_statement      : 25
boolean_constant     : 102
break_statement      : 29
call_arguments       : 95 122
call_arguments_empty : 96
call_arguments_nonempty : 97 100
call_expression      : 91
constant             : 86
continue_statement   : 30
discard_statement    : 31
do_while_statement   : 28
expression           : 39 42 43 44 45 50 51 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 83 84 85 92 94 99 100
expression_statement : 34
function_declaration : 4
function_definition  : 5
function_kind        : 19
function_prototype   : 20 21
identifier           : 87 111
if_statement         : 26
integer_constant     : 101
member_access        : 89
module               : 0
module_element       : 3
module_element_list  : 1 3
null_statement       : 24
optional_attribute_list : 114 117 119
parenthesis_expression : 88
primary_expression   : 52 93 94 95
prototype_argument   : 12 13
prototype_arguments  : 19
prototype_arguments_empty : 9
prototype_arguments_nonempty : 10 13
real_constant        : 103
return_statement     : 32
statement            : 23 42 43 43 44 45
statement_list       : 21 23 41
string_literal       : 104
struct_definition    : 6
struct_field         : 115
struct_fields        : 114 115
subscript_access     : 90
type                 : 110 117
type_expr            : 14 19 35
variable_name        : 36 37
variables_declaration : 33
variables_names      : 35 37
while_statement      : 27

Parsing method: LALR

state 0

    (0) S' -> . module
    (1) module -> . module_element_list
    (2) module_element_list -> .
    (3) module_element_list -> . module_element_list module_element

    KERNEL          reduce using rule 2 (module_element_list -> .)
    STRUCT          reduce using rule 2 (module_element_list -> .)
    LBRACKET        reduce using rule 2 (module_element_list -> .)
    TYPE            reduce using rule 2 (module_element_list -> .)
    IDENTIFIER      reduce using rule 2 (module_element_list -> .)
    $end            reduce using rule 2 (module_element_list -> .)

    module_element_list            shift and go to state 1
    module                         shift and go to state 2

state 1

    (1) module -> module_element_list .
    (3) module_element_list -> module_element_list . module_element
    (4) module_element -> . function_declaration
    (5) module_element -> . function_definition
    (6) module_element -> . struct_definition
    (20) function_declaration -> . function_prototype SEMICOLON
    (21) function_definition -> . function_prototype LCBRACKET statement_list RCBRACKET
    (114) struct_definition -> . optional_attribute_list STRUCT IDENTIFIER LCBRACKET struct_fields RCBRACKET SEMICOLON
    (19) function_prototype -> . function_kind type_expr IDENTIFIER LPAREN prototype_arguments RPAREN
    (118) optional_attribute_list -> .
    (119) optional_attribute_list -> . optional_attribute_list attribute
    (7) function_kind -> .
    (8) function_kind -> . KERNEL LPAREN IDENTIFIER RPAREN

    $end            reduce using rule 1 (module -> module_element_list .)
    STRUCT          reduce using rule 118 (optional_attribute_list -> .)
    LBRACKET        reduce using rule 118 (optional_attribute_list -> .)
    TYPE            reduce using rule 7 (function_kind -> .)
    IDENTIFIER      reduce using rule 7 (function_kind -> .)
    KERNEL          shift and go to state 10

    struct_definition              shift and go to state 3
    function_prototype             shift and go to state 4
    module_element                 shift and go to state 5
    function_declaration           shift and go to state 6
    optional_attribute_list        shift and go to state 7
    function_kind                  shift and go to state 8
    function_definition            shift and go to state 9

state 2

    (0) S' -> module .



state 3

    (6) module_element -> struct_definition .

    KERNEL          reduce using rule 6 (module_element -> struct_definition .)
    STRUCT          reduce using rule 6 (module_element -> struct_definition .)
    LBRACKET        reduce using rule 6 (module_element -> struct_definition .)
    TYPE            reduce using rule 6 (module_element -> struct_definition .)
    IDENTIFIER      reduce using rule 6 (module_element -> struct_definition .)
    $end            reduce using rule 6 (module_element -> struct_definition .)


state 4

    (20) function_declaration -> function_prototype . SEMICOLON
    (21) function_definition -> function_prototype . LCBRACKET statement_list RCBRACKET

    SEMICOLON       shift and go to state 12
    LCBRACKET       shift and go to state 11


state 5

    (3) module_element_list -> module_element_list module_element .

    KERNEL          reduce using rule 3 (module_element_list -> module_element_list module_element .)
    STRUCT          reduce using rule 3 (module_element_list -> module_element_list module_element .)
    LBRACKET        reduce using rule 3 (module_element_list -> module_element_list module_element .)
    TYPE            reduce using rule 3 (module_element_list -> module_element_list module_element .)
    IDENTIFIER      reduce using rule 3 (module_element_list -> module_element_list module_element .)
    $end            reduce using rule 3 (module_element_list -> module_element_list module_element .)


state 6

    (4) module_element -> function_declaration .

    KERNEL          reduce using rule 4 (module_element -> function_declaration .)
    STRUCT          reduce using rule 4 (module_element -> function_declaration .)
    LBRACKET        reduce using rule 4 (module_element -> function_declaration .)
    TYPE            reduce using rule 4 (module_element -> function_declaration .)
    IDENTIFIER      reduce using rule 4 (module_element -> function_declaration .)
    $end            reduce using rule 4 (module_element -> function_declaration .)


state 7

    (114) struct_definition -> optional_attribute_list . STRUCT IDENTIFIER LCBRACKET struct_fields RCBRACKET SEMICOLON
    (119) optional_attribute_list -> optional_attribute_list . attribute
    (120) attribute -> . LBRACKET IDENTIFIER attribute_arguments RBRACKET

    STRUCT          shift and go to state 13
    LBRACKET        shift and go to state 15

    attribute                      shift and go to state 14

state 8

    (19) function_prototype -> function_kind . type_expr IDENTIFIER LPAREN prototype_arguments RPAREN
    (110) type_expr -> . type
    (111) type_expr -> . identifier
    (112) type -> . TYPE
    (113) identifier -> . IDENTIFIER

    TYPE            shift and go to state 17
    IDENTIFIER      shift and go to state 19

    type                           shift and go to state 20
    type_expr                      shift and go to state 18
    identifier                     shift and go to state 16

state 9

    (5) module_element -> function_definition .

    KERNEL          reduce using rule 5 (module_element -> function_definition .)
    STRUCT          reduce using rule 5 (module_element -> function_definition .)
    LBRACKET        reduce using rule 5 (module_element -> function_definition .)
    TYPE            reduce using rule 5 (module_element -> function_definition .)
    IDENTIFIER      reduce using rule 5 (module_element -> function_definition .)
    $end            reduce using rule 5 (module_element -> function_definition .)


state 10

    (8) function_kind -> KERNEL . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 21


state 11

    (21) function_definition -> function_prototype LCBRACKET . statement_list RCBRACKET
    (22) statement_list -> .
    (23) statement_list -> . statement_list statement

    RCBRACKET       reduce using rule 22 (statement_list -> .)
    SEMICOLON       reduce using rule 22 (statement_list -> .)
    LCBRACKET       reduce using rule 22 (statement_list -> .)
    IF              reduce using rule 22 (statement_list -> .)
    WHILE           reduce using rule 22 (statement_list -> .)
    DO              reduce using rule 22 (statement_list -> .)
    BREAK           reduce using rule 22 (statement_list -> .)
    CONTINUE        reduce using rule 22 (statement_list -> .)
    DISCARD         reduce using rule 22 (statement_list -> .)
    RETURN          reduce using rule 22 (statement_list -> .)
    PLUS            reduce using rule 22 (statement_list -> .)
    MINUS           reduce using rule 22 (statement_list -> .)
    LNOT            reduce using rule 22 (statement_list -> .)
    BITNOT          reduce using rule 22 (statement_list -> .)
    TYPE            reduce using rule 22 (statement_list -> .)
    IDENTIFIER      reduce using rule 22 (statement_list -> .)
    LPAREN          reduce using rule 22 (statement_list -> .)
    INTEGER         reduce using rule 22 (statement_list -> .)
    TRUE            reduce using rule 22 (statement_list -> .)
    FALSE           reduce using rule 22 (statement_list -> .)
    REAL            reduce using rule 22 (statement_list -> .)
    STRING          reduce using rule 22 (statement_list -> .)

    statement_list                 shift and go to state 22

state 12

    (20) function_declaration -> function_prototype SEMICOLON .

    KERNEL          reduce using rule 20 (function_declaration -> function_prototype SEMICOLON .)
    STRUCT          reduce using rule 20 (function_declaration -> function_prototype SEMICOLON .)
    LBRACKET        reduce using rule 20 (function_declaration -> function_prototype SEMICOLON .)
    TYPE            reduce using rule 20 (function_declaration -> function_prototype SEMICOLON .)
    IDENTIFIER      reduce using rule 20 (function_declaration -> function_prototype SEMICOLON .)
    $end            reduce using rule 20 (function_declaration -> function_prototype SEMICOLON .)


state 13

    (114) struct_definition -> optional_attribute_list STRUCT . IDENTIFIER LCBRACKET struct_fields RCBRACKET SEMICOLON

    IDENTIFIER      shift and go to state 23


state 14

    (119) optional_attribute_list -> optional_attribute_list attribute .

    STRUCT          reduce using rule 119 (optional_attribute_list -> optional_attribute_list attribute .)
    LBRACKET        reduce using rule 119 (optional_attribute_list -> optional_attribute_list attribute .)
    TYPE            reduce using rule 119 (optional_attribute_list -> optional_attribute_list attribute .)


state 15

    (120) attribute -> LBRACKET . IDENTIFIER attribute_arguments RBRACKET

    IDENTIFIER      shift and go to state 24


state 16

    (111) type_expr -> identifier .

    IDENTIFIER      reduce using rule 111 (type_expr -> identifier .)


state 17

    (112) type -> TYPE .

    IDENTIFIER      reduce using rule 112 (type -> TYPE .)


state 18

    (19) function_prototype -> function_kind type_expr . IDENTIFIER LPAREN prototype_arguments RPAREN

    IDENTIFIER      shift and go to state 25


state 19

    (113) identifier -> IDENTIFIER .

    DOT             reduce using rule 113 (identifier -> IDENTIFIER .)
    LBRACKET        reduce using rule 113 (identifier -> IDENTIFIER .)
    LPAREN          reduce using rule 113 (identifier -> IDENTIFIER .)
    PLUS            reduce using rule 113 (identifier -> IDENTIFIER .)
    MINUS           reduce using rule 113 (identifier -> IDENTIFIER .)
    MULTIPLY        reduce using rule 113 (identifier -> IDENTIFIER .)
    DIVIDE          reduce using rule 113 (identifier -> IDENTIFIER .)
    REMAINDER       reduce using rule 113 (identifier -> IDENTIFIER .)
    LT              reduce using rule 113 (identifier -> IDENTIFIER .)
    LE              reduce using rule 113 (identifier -> IDENTIFIER .)
    EQ              reduce using rule 113 (identifier -> IDENTIFIER .)
    NE              reduce using rule 113 (identifier -> IDENTIFIER .)
    GT              reduce using rule 113 (identifier -> IDENTIFIER .)
    GE              reduce using rule 113 (identifier -> IDENTIFIER .)
    LAND            reduce using rule 113 (identifier -> IDENTIFIER .)
    LOR             reduce using rule 113 (identifier -> IDENTIFIER .)
    BITAND          reduce using rule 113 (identifier -> IDENTIFIER .)
    BITOR           reduce using rule 113 (identifier -> IDENTIFIER .)
    BITXOR          reduce using rule 113 (identifier -> IDENTIFIER .)
    SHIFTLEFT       reduce using rule 113 (identifier -> IDENTIFIER .)
    SHIFTRIGHT      reduce using rule 113 (identifier -> IDENTIFIER .)
    ASSIGN          reduce using rule 113 (identifier -> IDENTIFIER .)
    ASSIGN_PLUS     reduce using rule 113 (identifier -> IDENTIFIER .)
    ASSIGN_MINUS    reduce using rule 113 (identifier -> IDENTIFIER .)
    ASSIGN_MULTIPLY reduce using rule 113 (identifier -> IDENTIFIER .)
    ASSIGN_DIVIDE   reduce using rule 113 (identifier -> IDENTIFIER .)
    ASSIGN_REMAINDER reduce using rule 113 (identifier -> IDENTIFIER .)
    ASSIGN_BITOR    reduce using rule 113 (identifier -> IDENTIFIER .)
    ASSIGN_BITAND   reduce using rule 113 (identifier -> IDENTIFIER .)
    ASSIGN_BITXOR   reduce using rule 113 (identifier -> IDENTIFIER .)
    ASSIGN_SHIFTLEFT reduce using rule 113 (identifier -> IDENTIFIER .)
    ASSIGN_SHIFTRIGHT reduce using rule 113 (identifier -> IDENTIFIER .)
    SEMICOLON       reduce using rule 113 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 113 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 113 (identifier -> IDENTIFIER .)
    RBRACKET        reduce using rule 113 (identifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 113 (identifier -> IDENTIFIER .)


state 20

    (110) type_expr -> type .

    IDENTIFIER      reduce using rule 110 (type_expr -> type .)


state 21

    (8) function_kind -> KERNEL LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 26


state 22

    (21) function_definition -> function_prototype LCBRACKET statement_list . RCBRACKET
    (23) statement_list -> statement_list . statement
    (24) statement -> . null_statement
    (25) statement -> . block_statement
    (26) statement -> . if_statement
    (27) statement -> . while_statement
    (28) statement -> . do_while_statement
    (29) statement -> . break_statement
    (30) statement -> . continue_statement
    (31) statement -> . discard_statement
    (32) statement -> . return_statement
    (33) statement -> . variables_declaration
    (34) statement -> . expression_statement
    (40) null_statement -> . SEMICOLON
    (41) block_statement -> . LCBRACKET statement_list RCBRACKET
    (42) if_statement -> . IF LPAREN expression RPAREN statement
    (43) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (44) while_statement -> . WHILE LPAREN expression RPAREN statement
    (45) do_while_statement -> . DO statement WHILE LPAREN expression RPAREN
    (46) break_statement -> . BREAK SEMICOLON
    (47) continue_statement -> . CONTINUE SEMICOLON
    (48) discard_statement -> . DISCARD SEMICOLON
    (49) return_statement -> . RETURN SEMICOLON
    (50) return_statement -> . RETURN expression SEMICOLON
    (35) variables_declaration -> . type_expr variables_names SEMICOLON
    (51) expression_statement -> . expression SEMICOLON
    (110) type_expr -> . type
    (111) type_expr -> . identifier
    (52) expression -> . primary_expression
    (53) expression -> . expression PLUS expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression MULTIPLY expression
    (56) expression -> . expression DIVIDE expression
    (57) expression -> . expression REMAINDER expression
    (58) expression -> . expression LT expression
    (59) expression -> . expression LE expression
    (60) expression -> . expression EQ expression
    (61) expression -> . expression NE expression
    (62) expression -> . expression GT expression
    (63) expression -> . expression GE expression
    (64) expression -> . expression LAND expression
    (65) expression -> . expression LOR expression
    (66) expression -> . expression BITAND expression
    (67) expression -> . expression BITOR expression
    (68) expression -> . expression BITXOR expression
    (69) expression -> . expression SHIFTLEFT expression
    (70) expression -> . expression SHIFTRIGHT expression
    (71) expression -> . expression ASSIGN expression
    (72) expression -> . expression ASSIGN_PLUS expression
    (73) expression -> . expression ASSIGN_MINUS expression
    (74) expression -> . expression ASSIGN_MULTIPLY expression
    (75) expression -> . expression ASSIGN_DIVIDE expression
    (76) expression -> . expression ASSIGN_REMAINDER expression
    (77) expression -> . expression ASSIGN_BITOR expression
    (78) expression -> . expression ASSIGN_BITAND expression
    (79) expression -> . expression ASSIGN_BITXOR expression
    (80) expression -> . expression ASSIGN_SHIFTLEFT expression
    (81) expression -> . expression ASSIGN_SHIFTRIGHT expression
    (82) expression -> . PLUS expression
    (83) expression -> . MINUS expression
    (84) expression -> . LNOT expression
    (85) expression -> . BITNOT expression
    (112) type -> . TYPE
    (113) identifier -> . IDENTIFIER
    (86) primary_expression -> . constant
    (87) primary_expression -> . identifier
    (88) primary_expression -> . parenthesis_expression
    (89) primary_expression -> . member_access
    (90) primary_expression -> . subscript_access
    (91) primary_expression -> . call_expression
    (101) constant -> . integer_constant
    (102) constant -> . boolean_constant
    (103) constant -> . real_constant
    (104) constant -> . string_literal
    (92) parenthesis_expression -> . LPAREN expression RPAREN
    (93) member_access -> . primary_expression DOT IDENTIFIER
    (94) subscript_access -> . primary_expression LBRACKET expression RBRACKET
    (95) call_expression -> . primary_expression LPAREN call_arguments RPAREN
    (105) integer_constant -> . INTEGER
    (106) boolean_constant -> . TRUE
    (107) boolean_constant -> . FALSE
    (108) real_constant -> . REAL
    (109) string_literal -> . STRING

    RCBRACKET       shift and go to state 38
    SEMICOLON       shift and go to state 39
    LCBRACKET       shift and go to state 55
    IF              shift and go to state 57
    WHILE           shift and go to state 33
    DO              shift and go to state 28
    BREAK           shift and go to state 61
    CONTINUE        shift and go to state 63
    DISCARD         shift and go to state 34
    RETURN          shift and go to state 30
    PLUS            shift and go to state 45
    MINUS           shift and go to state 37
    LNOT            shift and go to state 29
    BITNOT          shift and go to state 62
    TYPE            shift and go to state 17
    IDENTIFIER      shift and go to state 19
    LPAREN          shift and go to state 54
    INTEGER         shift and go to state 48
    TRUE            shift and go to state 36
    FALSE           shift and go to state 59
    REAL            shift and go to state 64
    STRING          shift and go to state 66

    expression_statement           shift and go to state 27
    constant                       shift and go to state 49
    integer_constant               shift and go to state 31
    break_statement                shift and go to state 32
    string_literal                 shift and go to state 35
    member_access                  shift and go to state 40
    parenthesis_expression         shift and go to state 56
    block_statement                shift and go to state 41
    return_statement               shift and go to state 42
    while_statement                shift and go to state 43
    continue_statement             shift and go to state 44
    statement                      shift and go to state 46
    boolean_constant               shift and go to state 47
    if_statement                   shift and go to state 50
    type                           shift and go to state 20
    do_while_statement             shift and go to state 52
    variables_declaration          shift and go to state 58
    primary_expression             shift and go to state 53
    null_statement                 shift and go to state 67
    subscript_access               shift and go to state 60
    type_expr                      shift and go to state 71
    real_constant                  shift and go to state 65
    identifier                     shift and go to state 51
    expression                     shift and go to state 68
    discard_statement              shift and go to state 69
    call_expression                shift and go to state 70

state 23

    (114) struct_definition -> optional_attribute_list STRUCT IDENTIFIER . LCBRACKET struct_fields RCBRACKET SEMICOLON

    LCBRACKET       shift and go to state 72


state 24

    (120) attribute -> LBRACKET IDENTIFIER . attribute_arguments RBRACKET
    (121) attribute_arguments -> .
    (122) attribute_arguments -> . LPAREN call_arguments RPAREN

    RBRACKET        reduce using rule 121 (attribute_arguments -> .)
    LPAREN          shift and go to state 74

    attribute_arguments            shift and go to state 73

state 25

    (19) function_prototype -> function_kind type_expr IDENTIFIER . LPAREN prototype_arguments RPAREN

    LPAREN          shift and go to state 75


state 26

    (8) function_kind -> KERNEL LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 76


state 27

    (34) statement -> expression_statement .

    RCBRACKET       reduce using rule 34 (statement -> expression_statement .)
    SEMICOLON       reduce using rule 34 (statement -> expression_statement .)
    LCBRACKET       reduce using rule 34 (statement -> expression_statement .)
    IF              reduce using rule 34 (statement -> expression_statement .)
    WHILE           reduce using rule 34 (statement -> expression_statement .)
    DO              reduce using rule 34 (statement -> expression_statement .)
    BREAK           reduce using rule 34 (statement -> expression_statement .)
    CONTINUE        reduce using rule 34 (statement -> expression_statement .)
    DISCARD         reduce using rule 34 (statement -> expression_statement .)
    RETURN          reduce using rule 34 (statement -> expression_statement .)
    PLUS            reduce using rule 34 (statement -> expression_statement .)
    MINUS           reduce using rule 34 (statement -> expression_statement .)
    LNOT            reduce using rule 34 (statement -> expression_statement .)
    BITNOT          reduce using rule 34 (statement -> expression_statement .)
    TYPE            reduce using rule 34 (statement -> expression_statement .)
    IDENTIFIER      reduce using rule 34 (statement -> expression_statement .)
    LPAREN          reduce using rule 34 (statement -> expression_statement .)
    INTEGER         reduce using rule 34 (statement -> expression_statement .)
    TRUE            reduce using rule 34 (statement -> expression_statement .)
    FALSE           reduce using rule 34 (statement -> expression_statement .)
    REAL            reduce using rule 34 (statement -> expression_statement .)
    STRING          reduce using rule 34 (statement -> expression_statement .)
    ELSE            reduce using rule 34 (statement -> expression_statement .)


state 28

    (45) do_while_statement -> DO . statement WHILE LPAREN expression RPAREN
    (24) statement -> . null_statement
    (25) statement -> . block_statement
    (26) statement -> . if_statement
    (27) statement -> . while_statement
    (28) statement -> . do_while_statement
    (29) statement -> . break_statement
    (30) statement -> . continue_statement
    (31) statement -> . discard_statement
    (32) statement -> . return_statement
    (33) statement -> . variables_declaration
    (34) statement -> . expression_statement
    (40) null_statement -> . SEMICOLON
    (41) block_statement -> . LCBRACKET statement_list RCBRACKET
    (42) if_statement -> . IF LPAREN expression RPAREN statement
    (43) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (44) while_statement -> . WHILE LPAREN expression RPAREN statement
    (45) do_while_statement -> . DO statement WHILE LPAREN expression RPAREN
    (46) break_statement -> . BREAK SEMICOLON
    (47) continue_statement -> . CONTINUE SEMICOLON
    (48) discard_statement -> . DISCARD SEMICOLON
    (49) return_statement -> . RETURN SEMICOLON
    (50) return_statement -> . RETURN expression SEMICOLON
    (35) variables_declaration -> . type_expr variables_names SEMICOLON
    (51) expression_statement -> . expression SEMICOLON
    (110) type_expr -> . type
    (111) type_expr -> . identifier
    (52) expression -> . primary_expression
    (53) expression -> . expression PLUS expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression MULTIPLY expression
    (56) expression -> . expression DIVIDE expression
    (57) expression -> . expression REMAINDER expression
    (58) expression -> . expression LT expression
    (59) expression -> . expression LE expression
    (60) expression -> . expression EQ expression
    (61) expression -> . expression NE expression
    (62) expression -> . expression GT expression
    (63) expression -> . expression GE expression
    (64) expression -> . expression LAND expression
    (65) expression -> . expression LOR expression
    (66) expression -> . expression BITAND expression
    (67) expression -> . expression BITOR expression
    (68) expression -> . expression BITXOR expression
    (69) expression -> . expression SHIFTLEFT expression
    (70) expression -> . expression SHIFTRIGHT expression
    (71) expression -> . expression ASSIGN expression
    (72) expression -> . expression ASSIGN_PLUS expression
    (73) expression -> . expression ASSIGN_MINUS expression
    (74) expression -> . expression ASSIGN_MULTIPLY expression
    (75) expression -> . expression ASSIGN_DIVIDE expression
    (76) expression -> . expression ASSIGN_REMAINDER expression
    (77) expression -> . expression ASSIGN_BITOR expression
    (78) expression -> . expression ASSIGN_BITAND expression
    (79) expression -> . expression ASSIGN_BITXOR expression
    (80) expression -> . expression ASSIGN_SHIFTLEFT expression
    (81) expression -> . expression ASSIGN_SHIFTRIGHT expression
    (82) expression -> . PLUS expression
    (83) expression -> . MINUS expression
    (84) expression -> . LNOT expression
    (85) expression -> . BITNOT expression
    (112) type -> . TYPE
    (113) identifier -> . IDENTIFIER
    (86) primary_expression -> . constant
    (87) primary_expression -> . identifier
    (88) primary_expression -> . parenthesis_expression
    (89) primary_expression -> . member_access
    (90) primary_expression -> . subscript_access
    (91) primary_expression -> . call_expression
    (101) constant -> . integer_constant
    (102) constant -> . boolean_constant
    (103) constant -> . real_constant
    (104) constant -> . string_literal
    (92) parenthesis_expression -> . LPAREN expression RPAREN
    (93) member_access -> . primary_expression DOT IDENTIFIER
    (94) subscript_access -> . primary_expression LBRACKET expression RBRACKET
    (95) call_expression -> . primary_expression LPAREN call_arguments RPAREN
    (105) integer_constant -> . INTEGER
    (106) boolean_constant -> . TRUE
    (107) boolean_constant -> . FALSE
    (108) real_constant -> . REAL
    (109) string_literal -> . STRING

    SEMICOLON       shift and go to state 39
    LCBRACKET       shift and go to state 55
    IF              shift and go to state 57
    WHILE           shift and go to state 33
    DO              shift and go to state 28
    BREAK           shift and go to state 61
    CONTINUE        shift and go to state 63
    DISCARD         shift and go to state 34
    RETURN          shift and go to state 30
    PLUS            shift and go to state 45
    MINUS           shift and go to state 37
    LNOT            shift and go to state 29
    BITNOT          shift and go to state 62
    TYPE            shift and go to state 17
    IDENTIFIER      shift and go to state 19
    LPAREN          shift and go to state 54
    INTEGER         shift and go to state 48
    TRUE            shift and go to state 36
    FALSE           shift and go to state 59
    REAL            shift and go to state 64
    STRING          shift and go to state 66
